feat: reconcile corrected game events
